tests/NormalTests/paczka1/fuzzy1/41313323.err
Error in line 10: S702 S702 36,8
Error in line 9: ZJIXZReW S430 29,3
Error in line 17: N2tXDVApat S702 99,0
Error in line 14: eSiwbNB7BSQ A276 68,2
Error in line 24: eSiwbNB7BSQ S430 63,9
Error in line 31: R6twTeEQQSz A276 84,0
Error in line 22: S702 A276 7,6
